<resources>
    <string name="app_name">C.I.Calculator</string>
    <string name="fragment_help">Help</string>
    <string name="fragment_info">Information</string>
    <string name="fragment_about">About</string>
    <string name="fragment_one">C.I.Calculator</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="contagios">contagions</string>
    <string name="introducir_contagios">Enter contagions</string>
    <string name="poblacion">population</string>
    <string name="introducir_poblacion">Enter population</string>
    <string name="calcular">calculate</string>
    <string name="incidencia_acumulada">cumulative incidence</string>
    <string name="xcienmil"> cases per 100,000 pop</string>
    <string name="compartir">Share</string>
    <string name="fallo">Complete los campos</string>

</resources>